<resources>
    <string name="app_name">Quizder</string>

    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="initial_score">Score 0/13</string>


    <string name="incorrect_toast">Wrong!</string>
    <string name="correct_toast">You got it!</string>

    <string name="question_1">Valentine\'s day is banned in Saudi Arabia.</string>
    <string name="question_2">A slug\'s blood is green.</string>
    <string name="question_3">Approximately one quarter of human bones are in the feet.</string>
    <string name="question_4">The total surface area of two human lungs is approximately 70 square metres.</string>
    <string name="question_5">In West Virginia, USA, if you accidentally hit an animal with your car, you are free to take it home to eat.</string>
    <string name="question_6">In London, UK, if you happen to die in the House of Parliament, you are technically entitled to a state funeral, because the building is considered too sacred a place.</string>
    <string name="question_7">It is illegal to pee in the Ocean in Portugal.</string>
    <string name="question_8">You can lead a cow down stairs but not up stairs.</string>
    <string name="question_9">Google was originally called \"Backrub\".</string>
    <string name="question_10">Buzz Aldrin\'s mother\'s maiden name was \"Moon\".</string>
    <string name="question_11">The loudest sound produced by any animal is 188 decibels. That animal is the African Elephant.</string>
    <string name="question_12">No piece of square dry paper can be folded in half more than 7 times.</string>
    <string name="question_13">Chocolate affects a dog\'s heart and nervous system; a few ounces are enough to kill a small dog.</string>
    <string name="resetBtn">Reset</string>
    <string name="undoBtn">Undo</string>
    <string name="skipBtn">Skip</string>
    <string name="credit">\@Created by Dipangshu Roy</string>

</resources>
