<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/creditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/credit"
        android:textColor="@android:color/background_dark"
        android:textIsSelectable="true"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/progress_bar"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/score"
        android:textColor="@color/colorText"
        android:textStyle="bold"
        android:textSize="25sp"
        android:text="@string/initial_score"
        android:padding="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="70dp"
        android:id="@+id/question_text_view"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/question_1"
        android:textColor="@color/colorText"
        android:textStyle="bold"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:layout_above="@id/ansBtn"
        android:layout_centerInParent="true"
        android:gravity="center"

        android:orientation="horizontal">

        <Button
            android:id="@+id/undoBtn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginRight="25dp"
            android:onClick="undo"
            android:text="@string/undoBtn"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/resetBtn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="reset"
            android:text="@string/resetBtn"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/skipBtn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="25dp"
            android:onClick="skip"
            android:text="@string/skipBtn"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ansBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/score"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="20dp">

        <Button
            android:id="@+id/true_button"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@color/colorTrueButton"
            android:text="@string/true_button"
            android:textColor="@color/colorText"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/false_button"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@color/colorFalseButton"
            android:text="@string/false_button"
            android:textColor="@color/colorText"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:indeterminate="false" />

</RelativeLayout>